flux/utilities/error-pages/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
    namespace: error-pages
    name: redirect-middleware
spec:
    errors:
        status:
            - "400"
            - "402-407"
            - "409-499"
            - "500"
            - "501"
            - "503"
            - "505-599"
        query: /{status}.html
        service:
            name: error-pages
            port: http
